@@ -1,5 +1,7 @@
 package edu.hm.hafner.analysis;
 
+import java.io.Serial;
+
 import org.apache.commons.lang3.exception.ExceptionUtils;
 
 import com.google.errorprone.annotations.FormatMethod;
@@ -10,6 +12,7 @@ import com.google.errorprone.annotations.FormatMethod;
  * @author Ullrich Hafner
  */
 public class ParsingException extends RuntimeException {
+    @Serial
     private static final long serialVersionUID = -9016364685084958944L;
 
     /**
@@ -39,7 +42,7 @@ public class ParsingException extends RuntimeException {
      */
     @FormatMethod
     public ParsingException(final Throwable cause, final String messageFormat, final Object... args) {
-        super(createMessage(cause, String.format(messageFormat, args)), cause);
+        super(createMessage(cause, messageFormat.formatted(args)), cause);
     }
 
     /**
@@ -57,11 +60,11 @@ public class ParsingException extends RuntimeException {
      */
     @FormatMethod
     public ParsingException(final String messageFormat, final Object... args) {
-        super(String.format(messageFormat, args));
+        super(messageFormat.formatted(args));
     }
 
     private static String createMessage(final Throwable cause, final String message) {
-        return String.format("%s%n%s%n%s", message,
+        return "%s%n%s%n%s".formatted(message,
                 ExceptionUtils.getMessage(cause), ExceptionUtils.getStackTrace(cause));
     }
 }
