@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.PrintStream;
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -37,7 +38,6 @@ import edu.hm.hafner.util.FilteredLog;
 import edu.hm.hafner.util.Generated;
 import edu.hm.hafner.util.LineRangeList;
 import edu.hm.hafner.util.PathUtil;
-import edu.hm.hafner.util.TreeString;
 import edu.hm.hafner.util.TreeStringBuilder;
 import edu.hm.hafner.util.VisibleForTesting;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
@@ -49,6 +49,7 @@ import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
  * mathematical <i>set</i> abstraction. This report provides a <i>total ordering</i> on its elements. I.e., the issues
  * in this report are ordered by their index: the first added issue is at position 0, the second added issues is at
  * position 1, and so on.
+ *
  * <p>
  * Additionally, this report provides methods to find and filter issues based on different properties. In order to
  * create issues use the provided {@link IssueBuilder builder} class.
@@ -59,6 +60,7 @@ import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 @SuppressWarnings({"PMD.ExcessivePublicCount", "PMD.ExcessiveClassLength", "PMD.GodClass", "PMD.CognitiveComplexity", "PMD.CyclomaticComplexity", "checkstyle:ClassFanOutComplexity"})
 // TODO: provide a readResolve method to check the instance and improve the performance (TreeString, etc.)
 public class Report implements Iterable<Issue>, Serializable {
+    @Serial
     private static final long serialVersionUID = 4L; // release 10.0.0
 
     @VisibleForTesting
@@ -80,7 +82,7 @@ public class Report implements Iterable<Issue>, Serializable {
     @CheckForNull @SuppressWarnings({"all", "UnusedVariable"})
     private transient Map<String, String> namesByOrigin; // Not needed anymore since  10.0.0
 
-    private int duplicatesSize = 0;
+    private int duplicatesSize;
 
     /**
      * Creates an empty {@link Report}.
@@ -349,7 +351,7 @@ public class Report implements Iterable<Issue>, Serializable {
         }
 
         for (Report report : reportsToAdd) {
-            Report copyWithoutDuplicates = report.copyEmptyInstance();
+            var copyWithoutDuplicates = report.copyEmptyInstance();
             for (Issue issue : report) {
                 if (contains(issue)) {
                     duplicatesSize++; // elements are marked as duplicate if the fingerprint is different
@@ -416,7 +418,7 @@ public class Report implements Iterable<Issue>, Serializable {
         if (issue.isPresent()) {
             return issue.get();
         }
-        throw new NoSuchElementException(String.format("No removed found with id %s.", issueId));
+        throw new NoSuchElementException("No removed found with id %s.".formatted(issueId));
     }
 
     private Optional<Issue> removeIfContained(final UUID issueId) {
@@ -456,7 +458,7 @@ public class Report implements Iterable<Issue>, Serializable {
         return stream().filter(issue -> issue.getId().equals(issueId))
                 .findAny()
                 .orElseThrow(() -> new NoSuchElementException(
-                        String.format("No issue found with id %s.", issueId)));
+                "No issue found with id %s.".formatted(issueId)));
     }
 
     /**
@@ -480,7 +482,7 @@ public class Report implements Iterable<Issue>, Serializable {
      * @return the found issues
      */
     public Report filter(final Predicate<? super Issue> criterion) {
-        Report filtered = copyEmptyInstance();
+        var filtered = copyEmptyInstance();
         filtered.addAll(elements.stream().filter(criterion).collect(Collectors.toList()));
         for (Report subReport : subReports) {
             filtered.addAll(subReport.filter(criterion));
@@ -918,7 +920,7 @@ public class Report implements Iterable<Issue>, Serializable {
      */
     @FormatMethod
     public void logInfo(final String format, final Object... args) {
-        infoMessages.add(String.format(format, args));
+        infoMessages.add(format.formatted(args));
     }
 
     /**
@@ -935,7 +937,7 @@ public class Report implements Iterable<Issue>, Serializable {
      */
     @FormatMethod
     public void logError(final String format, final Object... args) {
-        errorMessages.add(String.format(format, args));
+        errorMessages.add(format.formatted(args));
     }
 
     /**
@@ -1100,24 +1102,24 @@ public class Report implements Iterable<Issue>, Serializable {
     private void readIssues(final ObjectInputStream input, final int size) throws IOException, ClassNotFoundException {
         var builder = new TreeStringBuilder();
         for (int i = 0; i < size; i++) {
-            String path = input.readUTF();
-            TreeString fileName = builder.intern(input.readUTF());
+            var path = input.readUTF();
+            var fileName = builder.intern(input.readUTF());
             int lineStart = input.readInt();
             int lineEnd = input.readInt();
             int columnStart = input.readInt();
             int columnEnd = input.readInt();
             var lineRanges = (LineRangeList) input.readObject();
-            String category = input.readUTF();
-            String type = input.readUTF();
+            var category = input.readUTF();
+            var type = input.readUTF();
             var packageName = builder.intern(input.readUTF());
-            String moduleName = input.readUTF();
+            var moduleName = input.readUTF();
             var severity = Severity.valueOf(input.readUTF());
             var message = builder.intern(readLongString(input));
-            String description = readLongString(input);
-            String origin = input.readUTF();
-            String originName = input.readUTF();
-            String reference = input.readUTF();
-            String fingerprint = input.readUTF();
+            var description = readLongString(input);
+            var origin = input.readUTF();
+            var originName = input.readUTF();
+            var reference = input.readUTF();
+            var fingerprint = input.readUTF();
             var additionalProperties = (Serializable) input.readObject();
             var uuid = (UUID) input.readObject();
 
@@ -1158,7 +1160,7 @@ public class Report implements Iterable<Issue>, Serializable {
         }
 
         for (Report subReport : subReports) {
-            String nameOfSubReport = subReport.getNameOfOrigin(origin);
+            var nameOfSubReport = subReport.getNameOfOrigin(origin);
             if (!DEFAULT_ID.equals(nameOfSubReport)) {
                 return nameOfSubReport;
             }
@@ -1364,6 +1366,7 @@ public class Report implements Iterable<Issue>, Serializable {
         public IssueFilterBuilder setExcludeFileNameFilter(final String... patterns) {
             return setExcludeFileNameFilter(Arrays.asList(patterns));
         }
+
         //</editor-fold>
 
         //<editor-fold desc="Package name">
@@ -1421,6 +1424,7 @@ public class Report implements Iterable<Issue>, Serializable {
         public IssueFilterBuilder setExcludePackageNameFilter(final String... patterns) {
             return setExcludePackageNameFilter(Arrays.asList(patterns));
         }
+
         //</editor-fold>
 
         //<editor-fold desc="Module name">
@@ -1478,6 +1482,7 @@ public class Report implements Iterable<Issue>, Serializable {
         public IssueFilterBuilder setExcludeModuleNameFilter(final String... patterns) {
             return setExcludeModuleNameFilter(Arrays.asList(patterns));
         }
+
         //</editor-fold>
 
         //<editor-fold desc="Category">
@@ -1535,6 +1540,7 @@ public class Report implements Iterable<Issue>, Serializable {
         public IssueFilterBuilder setExcludeCategoryFilter(final String... patterns) {
             return setExcludeCategoryFilter(Arrays.asList(patterns));
         }
+
         //</editor-fold>
 
         //<editor-fold desc="Type">
@@ -1592,6 +1598,7 @@ public class Report implements Iterable<Issue>, Serializable {
         public IssueFilterBuilder setExcludeTypeFilter(final String... patterns) {
             return setExcludeTypeFilter(Arrays.asList(patterns));
         }
+
         //</editor-fold>
 
         //<editor-fold desc="Message">
@@ -1651,7 +1658,7 @@ public class Report implements Iterable<Issue>, Serializable {
         }
 
         private void addMessageFilter(final Collection<String> patterns, final FilterType filterType) {
-            addNewFilter(patterns, issue -> String.format("%s%n%s", issue.getMessage(), issue.getDescription()),
+            addNewFilter(patterns, issue -> "%s%n%s".formatted(issue.getMessage(), issue.getDescription()),
                     filterType);
         }
         //</editor-fold>
